Added somemore default styling (colour change)

--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -1,5 +1,5 @@
 .new-expense {
-  background-color: #a892ee;
+  background-color: #E384FF;
   padding: 1rem;
   margin: 2rem auto;
   width: 50rem;
@@ -13,8 +13,8 @@
   font: inherit;
   cursor: pointer;
   padding: 1rem 2rem;
-  border: 1px solid #40005d;
-  background-color: #40005d;
+  border: 1px solid #41644A;
+  background-color: #41644A;
   color: white;
   border-radius: 12px;
   margin-right: 1rem;
@@ -22,17 +22,17 @@
 
 .new-expense button:hover,
 .new-expense button:active {
-  background-color: #510674;
-  border-color: #510674;
+  background-color: #E86A33;
+  border-color: #E86A33;
 }
 
 .new-expense button.alternative {
-  color: #220131;
+  color: #E86A33;
   border-color: transparent;
   background-color: transparent;
 }
 
 .new-expense button.alternative:hover,
 .new-expense button.alternative:active {
-  background-color: #ddb3f8;
+  background-color: #E86A33;
 }
