--- a/src/components/Expenses/ExpenseItem.css
+++ b/src/components/Expenses/ExpenseItem.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 0.5rem;
   margin: 1rem 0;
-  background-color: #4b4b4b;
+  background-color: #FFA3FD;
 }
 
 .expense-item__description {
@@ -30,8 +30,8 @@
   font-size: 1rem;
   font-weight: bold;
   color: white;
-  background-color: #40005d;
-  border: 1px solid white;
+  background-color: #865DFF;
+  border: 1px solid #191825;
   padding: 0.5rem;
   border-radius: 12px;
 }
